fix image paths

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
           <ul class="navbar__actions">
             <li>
               <button>
-                <img src="/assets/images/search.svg" alt="search svg" />
+                <img src="assets/images/search.svg" alt="search svg" />
               </button>
             </li>
             <li>
               <button>
-                <img src="/assets/images/basket.svg" alt="basket svg" />
+                <img src="assets/images/basket.svg" alt="basket svg" />
                 <span class="navbar__actions-count">2</span>
               </button>
             </li>
             <li>
               <button>
-                <img src="/assets/images/person.svg" alt="person svg" />
+                <img src="assets/images/person.svg" alt="person svg" />
               </button>
             </li>
           </ul>
