add delivery section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       </div>
     </header>
     <main>
+      <!-- Start Popular Products -->
       <section class="popular__products">
         <img
           src="./assets/images/leaf.png"
@@ -115,7 +116,7 @@
           <header class="section__header">
             <h6>Online Store</h6>
             <h2>Popular Products</h2>
-            <img src="/assets/images/curve_line.png" alt="curve line" />
+            <img src="assets/images/curve_line.png" alt="curve line" />
           </header>
           <div class="popular__products-content">
             <div class="popular__products-item">
@@ -198,6 +199,84 @@
           </div>
         </div>
       </section>
+      <!-- End Popular Products -->
+      <!-- Start delivered section -->
+      <section class="delivered">
+        <div class="container">
+          <div class="delivered__slider">
+            <div class="food__category-item active">
+              <div>
+                <img src="assets/images/cup.png" alt="cup image" />
+              </div>
+              <span>Coffee</span>
+            </div>
+            <div class="food__category-item">
+              <div>
+                <img src="assets/images/burger.png" alt="burger image" />
+              </div>
+              <span>Fast Food</span>
+            </div>
+            <div class="food__category-item">
+              <div>
+                <img src="assets/images/pizza.png" alt="pizza image" />
+              </div>
+              <span>Pizza</span>
+            </div>
+            <div class="food__category-item">
+              <div>
+                <img src="assets/images/desiMenu.png" alt="Desi Menu image" />
+              </div>
+              <span>Desi Menu</span>
+            </div>
+            <div class="food__category-item">
+              <div>
+                <img src="assets/images/dessert.png" alt="Desserts image" />
+              </div>
+              <span>Coffee</span>
+            </div>
+          </div>
+          <div class="delivered__banner">
+            <img
+              src="assets/images/leaf.png"
+              alt="leaf image"
+              class="leaf__image"
+            />
+            <div class="delivered__dots">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <div class="delivered__content">
+              <div class="delivery_man">
+                <h6>Faster Food Delivery Service</h6>
+                <img src="assets/images/delivery-man.png" alt="delivery man" />
+              </div>
+              <h2>Get delivered while it is still hot.</h2>
+              <p>
+                Bring together your discussions memberships and content. Start
+                your 7-day free trial.
+              </p>
+              <button>GET STARTED</button>
+            </div>
+            <img
+              src="assets/images/coffee.png"
+              alt="coffee__image"
+              class="coffee__image"
+            />
+            <img
+              src="assets/images/cup.png"
+              alt="cup image"
+              class="cup__image"
+            />
+            <img
+              src="assets/images/marshmallow.png"
+              alt="marshmallow image"
+              class="marshmallow__image"
+            />
+          </div>
+        </div>
+      </section>
+      <!-- End delivered section -->
     </main>
   </body>
 </html>
