add popular menu section

--- a/index.html
+++ b/index.html
@@ -204,11 +204,13 @@
       <section class="delivered">
         <div class="container">
           <div class="delivered__slider">
-            <div class="food__category-item active">
-              <div>
-                <img src="assets/images/cup.png" alt="cup image" />
+            <div class="delivered__box-shadow">
+              <div class="food__category-item active">
+                <div>
+                  <img src="assets/images/cup.png" alt="cup image" />
+                </div>
+                <span>Coffee</span>
               </div>
-              <span>Coffee</span>
             </div>
             <div class="food__category-item">
               <div>
@@ -277,6 +279,222 @@
         </div>
       </section>
       <!-- End delivered section -->
+      <!-- Start Popular Menu Section -->
+      <section class="popular__menu">
+        <div class="container">
+          <header class="section__header">
+            <h6>Popular Menu</h6>
+            <h2>Amazing Food Served With Delicacy</h2>
+          </header>
+          <main class="popular__menu-content">
+            <div class="popular__menu-item">
+              <div class="popular__menu-img">
+                <img
+                  src="assets/images/popular__menu1.png"
+                  alt="chicken image"
+                />
+              </div>
+              <div class="popular__menu-stars">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+              <div class="popular__menu-text">
+                <h4>Dishim with Fries and Sause</h4>
+                <p>
+                  Lorem Ipsum Lorem Ipsum is simply and dummy text of the
+                  printing.
+                </p>
+              </div>
+              <div class="popular__menu-footer">
+                <span>$7.10</span>
+                <div class="popular__menu-buttons">
+                  <button>
+                    <i class="fa-regular fa-heart"></i>
+                  </button>
+                  <button>
+                    <i class="fa-solid fa-share"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="popular__menu-item">
+              <div class="popular__menu-img">
+                <img
+                  src="assets/images/popular__menu2.png"
+                  alt="chicken image"
+                />
+              </div>
+              <div class="popular__menu-stars">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+              <div class="popular__menu-text">
+                <h4>Chicken Hot Wings</h4>
+                <p>
+                  Lorem Ipsum Lorem Ipsum is simply and dummy text of the
+                  printing.
+                </p>
+              </div>
+              <div class="popular__menu-footer">
+                <span>$6.40</span>
+                <div class="popular__menu-buttons">
+                  <button>
+                    <i class="fa-regular fa-heart"></i>
+                  </button>
+                  <button>
+                    <i class="fa-solid fa-share"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="popular__menu-item">
+              <div class="popular__menu-img">
+                <img
+                  src="assets/images/popular__menu3.png"
+                  alt="chicken image"
+                />
+              </div>
+              <div class="popular__menu-stars">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+              <div class="popular__menu-text">
+                <h4>Samosas with Green Chatni</h4>
+                <p>
+                  Lorem Ipsum Lorem Ipsum is simply and dummy text of the
+                  printing.
+                </p>
+              </div>
+              <div class="popular__menu-footer">
+                <span>$4.80</span>
+                <div class="popular__menu-buttons">
+                  <button>
+                    <i class="fa-regular fa-heart"></i>
+                  </button>
+                  <button>
+                    <i class="fa-solid fa-share"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="popular__menu-item">
+              <div class="popular__menu-img">
+                <img
+                  src="assets/images/popular__menu4.png"
+                  alt="chicken image"
+                />
+              </div>
+              <div class="popular__menu-stars">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+              <div class="popular__menu-text">
+                <h4>Sweet Sawaiyan</h4>
+                <p>
+                  Lorem Ipsum Lorem Ipsum is simply and dummy text of the
+                  printing.
+                </p>
+              </div>
+              <div class="popular__menu-footer">
+                <span>$5.10</span>
+                <div class="popular__menu-buttons">
+                  <button>
+                    <i class="fa-regular fa-heart"></i>
+                  </button>
+                  <button>
+                    <i class="fa-solid fa-share"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="popular__menu-item">
+              <div class="popular__menu-img">
+                <img
+                  src="assets/images/popular__menu5.png"
+                  alt="chicken image"
+                />
+              </div>
+              <div class="popular__menu-stars">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+              <div class="popular__menu-text">
+                <h4>Fried Raw Fish</h4>
+                <p>
+                  Lorem Ipsum Lorem Ipsum is simply and dummy text of the
+                  printing.
+                </p>
+              </div>
+              <div class="popular__menu-footer">
+                <span>$3.60</span>
+                <div class="popular__menu-buttons">
+                  <button>
+                    <i class="fa-regular fa-heart"></i>
+                  </button>
+                  <button>
+                    <i class="fa-solid fa-share"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="popular__menu-item">
+              <div class="popular__menu-img">
+                <img
+                  src="assets/images/popular__menu6.png"
+                  alt="chicken image"
+                />
+              </div>
+              <div class="popular__menu-stars">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+              <div class="popular__menu-text">
+                <h4>Brakefast with Half Fried Egg</h4>
+                <p>
+                  Lorem Ipsum Lorem Ipsum is simply and dummy text of the
+                  printing.
+                </p>
+              </div>
+              <div class="popular__menu-footer">
+                <span>$6.40</span>
+                <div class="popular__menu-buttons">
+                  <button>
+                    <i class="fa-regular fa-heart"></i>
+                  </button>
+                  <button>
+                    <i class="fa-solid fa-share"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </main>
+          <div class="all__menu-button">
+            <button>
+              <span>See all Menu</span>
+              <span><i class="fa-solid fa-chevron-right"></i></span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- End Popular Menu Section -->
     </main>
   </body>
 </html>
