add download app section

--- a/index.html
+++ b/index.html
@@ -281,6 +281,11 @@
       <!-- End delivered section -->
       <!-- Start Popular Menu Section -->
       <section class="popular__menu">
+        <img
+          src="assets/images/big__leaf.png"
+          alt="leaf image"
+          class="popular__menu-leaf"
+        />
         <div class="container">
           <header class="section__header">
             <h6>Popular Menu</h6>
@@ -495,6 +500,36 @@
         </div>
       </section>
       <!-- End Popular Menu Section -->
+      <!-- Start download app Section -->
+      <section class="download__app">
+        <div class="container">
+          <div class="download__app-img">
+            <img src="assets/images/Mobile.png" alt="mobile image" />
+            <img
+              src="assets/images/double__leaf.png"
+              alt="leaf image"
+              class="download__app-leaf-image"
+            />
+          </div>
+          <div class="download__app-content">
+            <div class="section__header">
+              <h6>Download Our App</h6>
+              <h2>It’s all here. All in one app.</h2>
+            </div>
+            <p>
+              Discover local, on-demand delivery or Pickup from restaurants,
+              nearby grocery and convenience stores, and more.
+            </p>
+            <div class="download__app-buttons">
+              <img
+                src="assets/images/download__fromButtons.png"
+                alt="download buttons"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End download app Section -->
     </main>
   </body>
 </html>
