add testimonial section

--- a/index.html
+++ b/index.html
@@ -530,6 +530,69 @@
         </div>
       </section>
       <!-- End download app Section -->
+      <!-- Start Testimonial Section -->
+      <section class="testimonial">
+        <div class="container">
+          <header class="section__header">
+            <h6>Testimonial</h6>
+            <h2>What they saying</h2>
+            <img src="assets/images/curve_line.png" alt="curve line" />
+          </header>
+          <div class="testimonial__content">
+            <div class="testimonial__item">
+              <div class="testimonial__img">
+                <img src="assets/images/testimonial1.png" alt="person image" />
+              </div>
+              <div class="testimonial__item-content">
+                <h6>Natasha Malik</h6>
+                <span>California</span>
+                <div class="testimonial__item-stars">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>
+                  “Him rendered may attended concerns jennings reserved now.
+                  <span>Sympathize</span> did now preference unpleasing mrs few.
+                  Mrs for <span>hour game</span> room want are fond dare. For
+                  detract charmed add talking age. Shy
+                  <span>resolution instrument</span>
+                  unreserved man few mr at discretion reasonable. Age out full
+                  gate bed day lose.”
+                </p>
+              </div>
+            </div>
+            <div class="testimonial__item">
+              <div class="testimonial__img">
+                <img src="assets/images/testimonial2.png" alt="person image" />
+              </div>
+              <div class="testimonial__item-content">
+                <h6>AR Shakir</h6>
+                <span>Arizona</span>
+                <div class="testimonial__item-stars">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>
+                  “Out believe has request not how comfort evident. Up
+                  <span>delight cousins</span> we feeling minutes. Genius has
+                  looked end piqued spring. Down has rose feel find man.
+                  Learning day desirous informed expenses material returned six
+                  the. She <span>enabled</span> invited exposed him another.
+                  <span>Reasonably conviction</span> solicitude me mr at
+                  discretion reasonable. Age out full gate bed day lose.”
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Testimonial Section -->
     </main>
   </body>
 </html>
