--- a/index.html
+++ b/index.html
@@ -593,6 +593,66 @@
         </div>
       </section>
       <!-- End Testimonial Section -->
+      <section class="discount">
+        <h4>Get special Discounts</h4>
+        <div class="discount__curveline">
+          <img src="assets/images/curve_line.png" alt="curve line" />
+        </div>
+        <p>
+          Input email address and complete your subscription to get our special
+          offer.
+        </p>
+        <div class="discount__input">
+          <span>shakir260@gmail.com</span>
+          <button>Subscribe</button>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="container">
+        <div class="footer__item">
+          <a href="#">
+            <img src="assets/images/logo__light.png" alt="logo image" />
+          </a>
+          <div class="social__items">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+          </div>
+        </div>
+        <div class="footer__item">
+          <h4>Contact</h4>
+          <ul>
+            <li>
+              <i class="fa-solid fa-location-dot"></i> F1 - 320 Jeff Heights,
+              Main Blvd, Gulberg, Lahore, Pakistan
+            </li>
+            <li>
+              <i class="fa-solid fa-message"></i> +92 - 300 - 115 - 222 -444
+            </li>
+            <li><i class="fa-solid fa-phone"></i> support@yannal.com</li>
+          </ul>
+        </div>
+        <div class="footer__item">
+          <h4>Support</h4>
+          <ul>
+            <li>Faq</li>
+            <li>Shipping & Returns</li>
+            <li>Contact Us</li>
+            <li>Our Partners</li>
+          </ul>
+        </div>
+        <div class="footer__item">
+          <h4>Info</h4>
+          <ul>
+            <li>Dates</li>
+            <li>Parties</li>
+            <li>Brithdays</li>
+            <li>Menu</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
